feat(styles): add SCSS variables for colors, fonts, shadows, and gradients

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,8 +1,6 @@
-$primary-color: #F2F2F2;
-$secondary-color: #212121;
-
+@import './variables.scss';
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Gilroy', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -17,7 +15,7 @@ $secondary-color: #212121;
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Gilroy', sans-serif;
   background-color: $secondary-color;
   color: $primary-color;
   margin: 0;
