feat(styles): add Gilroy font integration

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -30,7 +30,7 @@ $shadow-1: 0px 12px 40px rgba(0, 0, 0, 0.4);
 $gradient-1: linear-gradient(90deg, #DBDBDB 5%, rgba(219, 219, 219, 0) 100%);
 
 // Font Family
-$font-family: 'Gilroy', sans-serif;
+$font-primary: 'Gilroy', sans-serif;
 
 // Font sizes (in pixels)
 $title-bold-24: 24px;
