feat(theme): add ThemeSwitcher and theme state management

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -29,6 +29,7 @@
     justify-content: flex-start;
     padding-left: 0;
     margin-left: -10px;
+    background: var(--homepage-header-bg);
   }
 
   &__select {
@@ -60,7 +61,7 @@
 
 // Компонент поста
 .post {
-  background: $color-white;
+  background: var(--select-btn-color);
   border-radius: $border-radius;
   padding: 16px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -75,7 +76,7 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: $darkest-grey;
+    color: var(--post-author-color);
   }
 
   &__title {
@@ -87,7 +88,7 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: $darkest-grey;
+    color:  var(--post-author-color);
   }
 
   &__date {
@@ -99,7 +100,7 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: $lighter-grey;
+    color: var(--post-data-color);
   }
 
   &__content {
@@ -111,7 +112,7 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: $grey;
+    color:  var(--post-content-color);
   }
 
   &__read-more {
@@ -139,6 +140,7 @@
     gap: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
+    color: var(--post-actions-color);
   }
   &__header {
     display: flex;
@@ -183,7 +185,7 @@
     }
 
     &__nav {
-      background: $lighter-grey;
+      background: var(--homepage-header-bg);
     }
   }
 }
@@ -194,7 +196,7 @@
   }
   .homepage {
     &__nav {
-      background: $very-light-grey;
+      background: var(--homepage-header-bg);
     }
   }
 }
@@ -210,25 +212,44 @@
     }
 
     &__nav {
-      background: $very-light-grey;
+      background: var(--homepage-header-bg);
       padding-left: 10px;
     }
   }
 }
+@media (max-width: 824px) {
+  .select-dropdown__button {
+    background: var(--select-btn-bg);
 
+    &_inner {
+      color: var(--select-btn-bg);
+
+    }
+  }
+}
 @media (min-width: 825px) {
   .homepage {
+    &__nav {
+      background: var(--homepage-header-bg);
+    }
     &__header {
       width: 100%;
       max-width: 743px;
-      background: $very-light-grey;
+      background: var(--homepage-header-bg);
       padding: 10px;
       box-shadow: none;
     }
 
     &__select {
-      background: $very-light-grey;
+      background:  var(--homepage-header-bg);
     }
 
+    .select-dropdown__button {
+      background: var(--homepage-header-bg);
+      &_inner {
+        color:  var(--homepage-header-color);
+
+      }
+    }
   }
 }
