--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -17,7 +17,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background-color: $grey;
+  background-color: var(--body-bg);
   display: flex;
   justify-content: center;
   align-items: flex-start;
