refactor(theme): continue updating styles for light and dark modes

--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -38,7 +38,8 @@ $grey-darker: #BEB9B4;
   --post-data-color: #BEB9B4;
   --theme-circle: #FCFCFC;
   --theme-toggle-bg: #212121;
-
+  --mobile-active-tab-color: #212121;
+  --burger-menu-color: #212121;
 
 }
 
@@ -58,6 +59,8 @@ $grey-darker: #BEB9B4;
   --post-data-color: #666666;
   --theme-circle: #212121;
   --theme-toggle-bg: #FCFCFC;
+  --mobile-active-tab-color: #F6F6F6;
+  --burger-menu-color: #686868;
 }
 
 $border-radius: 8px;
