--- a/src/shared/ui/SelectDropdown/SelectDropdown.scss
+++ b/src/shared/ui/SelectDropdown/SelectDropdown.scss
@@ -10,6 +10,7 @@
     height: 44px;
     padding: 10px;
     background: var(--select-btn-color);
+    color: var(--mobile-active-tab-color);
     border: none;
     border-radius: $border-radius;
     cursor: pointer;
@@ -84,11 +85,13 @@
         justify-content: center;
         align-items: center;
         gap: 8px;
+
       }
 
       &__arrow {
         width: 16px;
         height: 16px;
+
       }
     }
     &__list {
