--- a/src/widgets/Header/Header.scss
+++ b/src/widgets/Header/Header.scss
@@ -14,28 +14,35 @@
   &__left {
     display: flex;
     align-items: center;
+    transition: gap 0.3s ease;
   }
 
   &__logo {
     height: 32px;
+    margin-left: -2px;
   }
 
   &__burger {
     display: none;
+    width: 24px;
+    height: 24px;
     font-size: 24px;
     border: none;
     background: none;
     cursor: pointer;
+    line-height: 31px;
+    color: var(--burger-menu-color);
   }
 
   &__nav {
-    margin: 0 auto;
-    padding-left: 20px;
-    width: 50% ;
+    margin: 0 calc(13.8% - 9vw) 0 calc(24% - 15vw);
+    padding-top: 0;
+    width: 50%;
     display: flex;
     justify-content: flex-end;
-    gap: 100px;
-
+    gap: 95px;
+    text-wrap: nowrap;
+    transition: margin 0.3s ease, gap 0.3s ease;
 
     &--open {
       display: flex;
@@ -67,8 +74,10 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    gap: 20px;
+    gap: clamp(10px, calc(50px - 1vw), 50px);
     width: 309px;
+    margin-right: 30px;
+    transition: gap 0.3s ease;
   }
 
   &__toggle {
@@ -101,6 +110,7 @@
     height: 44px;
     display: flex;
     flex-direction: row;
+    gap: 10px;
   }
 
   &__avatar {
@@ -108,12 +118,14 @@
     height: 32px;
     border-radius: 50%;
     margin-top: 2px;
+    margin-left: -2px;
   }
 
   &__username {
     font-weight: $font-weight-semibold;
-    margin: 0 auto;
+    margin: 0;
     line-height: 44px;
+    color: var(--post-author-color);
   }
  }
 
@@ -148,7 +160,7 @@
     &__mobile-active-tab {
       width: 100%;
       padding: 8px;
-      color: $darkest-grey;
+      color: var(--mobile-active-tab-color);
       text-align: center;
       font-weight: $font-weight-semibold;
     }
@@ -169,14 +181,14 @@
 
 @media (min-width: 824px) and (max-width: 1440px) {
   .header {
-    padding: 0 32px;
+    padding: 0 50px;
     &__mobile-active-tab {
       display: none;
     }
   }
   .header__username {
     font-weight: $font-weight-semibold;
-    color: $darkest-grey;
+    color: var(--post-author-color);;
     font-size: 16px;
   }
   .header__logo {
@@ -189,14 +201,14 @@
 
 @media (min-width: 1441px) {
   .header {
-    padding: 0 64px;
+    padding: 0 50px;
     &__mobile-active-tab {
       display: none;
     }
   }
   .header__username {
     font-weight: $font-weight-semibold;
-    color: $darkest-grey;
+    color: var(--post-author-color);;
     font-size: 16px;
   }
   .header__logo {
