--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -149,8 +149,8 @@
   }
 
   &__avatar {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
   }
 
@@ -201,10 +201,12 @@
   }
 }
 
-@media (min-width: 320px) {
+@media (min-width: 320px) and (max-width: 823px) {
   .homepage {
     &__content {
       width: 99vw;
+      padding: 16px;
+      gap: 8px;
     }
 
     &__select {
@@ -214,7 +216,32 @@
     &__nav {
       background: var(--homepage-header-bg);
       padding-left: 10px;
+     padding-top: 10px;
+      margin-bottom: -10px;
     }
+  }
+  .post {
+    padding: 16px;
+    &__header {
+      margin-bottom: 27px;
+    }
+  }
+  .post__title {
+    font-size: 16px;
+  }
+  .post__content >span {
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Ограничение в 2 строки */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .post__read-more {
+    display: block;
+    text-align: left;
+  }
+  .post__image {
+    min-height: 212px;
   }
 }
 @media (max-width: 824px) {
@@ -252,4 +279,129 @@
       }
     }
   }
+}
+@media (min-width: 825px) {
+  .homepage {
+    &__content {
+      gap: 25px;
+    }
+  }
+  .post {
+    background: var(--select-btn-color);
+    border-radius: 20px;
+    padding: 22px 41px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    color: black;
+
+    &__author {
+      font-family: 'Gilroy', sans-serif;
+      font-size: $body-medium-16;
+      font-weight: $font-weight-medium;
+      line-height: 22px;
+      letter-spacing: 0.01em;
+      text-align: left;
+      text-underline-position: from-font;
+      text-decoration-skip-ink: none;
+      color: var(--post-author-color);
+    }
+
+    &__title {
+      font-family: 'Gilroy', sans-serif;
+      font-size: $title-semibold-18;
+      font-weight: 600;
+      line-height: 21px;
+      letter-spacing: 0.01em;
+      text-align: left;
+      text-underline-position: from-font;
+      text-decoration-skip-ink: none;
+      color:  var(--post-author-color);
+    }
+
+    &__date {
+      font-family: 'Gilroy', sans-serif;
+      font-size: $body-regular-14;
+      font-weight: 400;
+      line-height: 14px;
+      letter-spacing: 0.01em;
+      text-align: left;
+      text-underline-position: from-font;
+      text-decoration-skip-ink: none;
+      color: var(--post-data-color);
+    }
+
+    &__content {
+      font-family: 'Gilroy', sans-serif;
+      font-size: $body-regular-16;
+      font-weight: 400;
+      line-height: 22px;
+      letter-spacing: 0.01em;
+      text-align: left;
+      text-underline-position: from-font;
+      text-decoration-skip-ink: none;
+      color:  var(--post-content-color);
+    }
+
+    &__read-more {
+      font-family: 'Gilroy', sans-serif;
+      font-size: $body-regular-16;
+      font-weight: 400;
+      line-height: 22px;
+      letter-spacing: 0.01em;
+      text-align: center;
+      text-underline-position: from-font;
+      text-decoration-skip-ink: none;
+      color: $primary-default;
+      text-decoration: none;
+      margin-left: 5px;
+
+
+      &:hover {
+        font-weight: 600;
+      }
+      &:active {
+        font-weight: 400;
+      }
+    }
+    &__actions {
+      display: flex;
+      flex-direction: row;
+      gap: 24px;
+      margin-top: 14px;
+      margin-bottom: 7px;
+      color: var(--post-actions-color);
+    }
+    &__header {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 27px;
+    }
+    &__avatar {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+    }
+
+    &__meta {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__title {
+      margin: 10px 0;
+      font-size: var($title-semibold-18);
+    }
+
+    &__content {
+      font-size: 16px;
+      margin-bottom: 10px;
+    }
+
+    &__image {
+      width: 100%;
+      border-radius: 18px;
+      margin: 10px 0;
+    }
+  }
+
 }
