--- a/src/widgets/Header/Header.scss
+++ b/src/widgets/Header/Header.scss
@@ -10,6 +10,14 @@
   height: 64px;
   background: var(--select-btn-color);
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+  position: relative;
+
+  &__svg {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
   &__left {
     display: flex;
@@ -30,7 +38,6 @@
     border: none;
     background: none;
     cursor: pointer;
-    line-height: 31px;
     color: var(--burger-menu-color);
   }
 
@@ -159,16 +166,21 @@
     }
     &__mobile-active-tab {
       width: 100%;
-      padding: 8px;
+      padding: 8px 0;
       color: var(--mobile-active-tab-color);
       text-align: center;
       font-weight: $font-weight-semibold;
+      font-size: 20px;
+      margin-left: -20px;
     }
   }
 
 }
 @media (min-width: 824px) and (max-width: 1020px){
   .header {
+    &__svg {
+      display: none;
+    }
     &__nav {
       gap: 30px;
     }
@@ -183,6 +195,9 @@
   .header {
     padding: 0 50px;
     &__mobile-active-tab {
+      display: none;
+    }
+    &__svg {
       display: none;
     }
   }
@@ -200,6 +215,132 @@
 
 
 @media (min-width: 1441px) {
+  .header {
+    max-width: 1440px;
+    width: 100vw;
+    margin: 0 auto;
+    padding: 0 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 64px;
+    background: var(--select-btn-color);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+    &__svg {
+      display: none;
+    }
+
+    &__left {
+      display: flex;
+      align-items: center;
+    }
+
+    &__logo {
+      height: 32px;
+      margin-left: -2px;
+    }
+
+    &__burger {
+      display: none;
+      font-size: 24px;
+      border: none;
+      background: none;
+      cursor: pointer;
+    }
+
+    &__nav {
+      margin: 0 13.8% 0 24%;
+      padding-top: 0;
+      width: 50% ;
+      display: flex;
+      justify-content: flex-end;
+      gap: 95px;
+      text-wrap: nowrap;
+
+
+      &--open {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background: $white;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        z-index: 100;
+      }
+    }
+
+    &__link {
+      text-decoration: none;
+      color: var(--primary-link-color);
+      font-weight: $font-weight-medium;
+      &--active {
+        color:  var(--primary-link-active);
+      }
+
+      &:hover {
+        color: $primary-dark;
+      }
+    }
+
+    &__right {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      gap: 50px;
+      width: 309px;
+      margin-right: 30px;
+    }
+
+    &__toggle {
+      display: none;
+    }
+
+    &__toggle-label {
+      width: 31px;
+      height: 19px;
+      background: $darkest-grey;
+      border-radius: 10px;
+      position: relative;
+      cursor: pointer;
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: 2px;
+        left: 2px;
+        width: 16px;
+        height: 16px;
+        background: $white;
+        border-radius: 50%;
+        transition: 0.3s;
+      }
+    }
+
+    &__profile {
+      width: 209px;
+      height: 44px;
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+    }
+
+    &__avatar {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      margin-top: 2px;
+      margin-left: -2px;
+    }
+
+    &__username {
+      font-weight: $font-weight-semibold;
+      margin: 0;
+      line-height: 44px;
+      color: var(--post-author-color);
+    }
+  }
   .header {
     padding: 0 50px;
     &__mobile-active-tab {
