--- a/src/shared/ui/ThemeSwitcher/ThemeSwitcher.scss
+++ b/src/shared/ui/ThemeSwitcher/ThemeSwitcher.scss
@@ -18,7 +18,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: var(--theme-toggle-bg);  ;
+    background: var(--theme-toggle-bg);
     border-radius: 24px;
     transition: 0.4s;
     width: 31px;
@@ -31,7 +31,7 @@
       width: var(--theme-circle-size, 16.57px);
       left: 1px;
       bottom: 1px;
-      background-color:  var(--theme-circle);
+      background-color: var(--theme-circle);
       border-radius: 50%;
       transition: 0.4s;
     }
@@ -43,7 +43,32 @@
     &:before {
       transform: translateX(12px) translateY(0%);
       background-color: var(--theme-circle);
+    }
+  }
+}
 
+/* Мобильная версия */
+@media (max-width: 823px) {
+  .theme-switcher {
+    width: 51px;
+    height: 31px;
+
+    &__slider {
+      width: 51px;
+      height: 31px;
+
+      &:before {
+        height: 27px;
+        width: 27px;
+        left: 2px;
+        bottom: 2px;
+      }
+    }
+
+    input:checked + &__slider {
+      &:before {
+        transform: translateX(21px);
+      }
     }
   }
 }
