--- a/src/features/navigation/MobileMenu.scss
+++ b/src/features/navigation/MobileMenu.scss
@@ -17,7 +17,7 @@
   transform: translateX(0);
   display: flex;
   align-items: center;
-  background: var(--primary-bg);
+  background: var(--mobile-menu-bg);
 
 }
 
@@ -55,7 +55,6 @@
     max-width: 1440px;
     z-index: 100;
     background: var(--select-btn-color);
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
     padding: 0 24px;
     display: flex;
     align-items: center;
