--- a/src/shared/ui/FormInputGroup/FormInputGroup.scss
+++ b/src/shared/ui/FormInputGroup/FormInputGroup.scss
@@ -1,89 +1,59 @@
-  .form-group {
-    max-width: 347px;
-    height: auto;
-    min-height: 72px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    overflow: visible;
+svg {
+  display: none;
+}
 
-    label {
-      display: block;
-      margin-bottom: 5px;
-      font-family: Gilroy, sans-serif;
+.input-wrapper svg {
+  display: block;
+}
+
+.form-group {
+  .input-wrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+
+    .input {
+      width: 100%;
+      padding: 8px 32px 8px 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
       font-size: 16px;
-      font-weight: 500;
-      line-height: 22px;
-      letter-spacing: 0.01em;
-      text-align: left;
-      text-underline-position: from-font;
-      text-decoration-skip-ink: none;
       color: #212121;
 
-
-    }
-
-    input {
-      width: 100%;
-      padding: 10px;
-      border: none;
-      background: #F6F6F6;
-      border-radius: 8px;
-      outline: none;
-      transition: border-color 0.3s;
-      font-family: Gilroy, sans-serif;
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 22px;
-      letter-spacing: 0.01em;
-      text-align: left;
-      text-underline-position: from-font;
-      text-decoration-skip-ink: none;
-      color: #BDBDBD;
-
-      &:focus {
-        border-color: #ff6b35;
-      }
-
       &.input-error {
-        border: 1px solid #F03E3E;
+        border-color: #f03e3e;
+      }
+
+      &::placeholder {
+        color: #bebebe;
       }
     }
 
-    .error-message {
-      font-size: 12px;
-      color:#F03E3E;
-      margin-top: 10px;
-      margin-bottom: 0;
-      display: block;
+    .status-icon {
+      position: absolute;
+      right: 8px;
+      top: 12px;
+      width: 20px;
+      height: 20px;
+
+      &.success-icon {
+        fill: #28a745;
+      }
+
+      &.error-icon {
+        fill: #f03e3e;
+      }
     }
+  }
 
   }
 
-  .login-button {
-    position: absolute;
-    bottom: 58px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    max-width: 343px;
-    height: 44px;
-    padding: 15px;
-    background: #EE683E;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    font-family: Gilroy, sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 20px;
-    letter-spacing: 0.01em;
-    text-align: center;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    color: #FCFCFC;
-
-    &:hover {
-      background: #e55a29;
-    }
+  .error-message {
+    color: #F03E3E;
+    font-size: 12px;
+    margin-top: 4px;
   }
+
+
+
