fix(ui): update icon styles in FormInputGroup

--- a/src/widgets/Header/Header.scss
+++ b/src/widgets/Header/Header.scss
@@ -112,6 +112,7 @@
     margin-left: -1px;
     &__burger {
       display: block;
+      margin-top: 30px;
     }
 
     &__logo {
@@ -134,6 +135,7 @@
       text-align: center;
       font-weight: $font-weight-semibold;
       font-size: 20px;
+      margin-top: 30px;
       margin-left: -20px;
     }
   }
