--- a/src/features/auth/ui/LoginPage/LoginPage.scss
+++ b/src/features/auth/ui/LoginPage/LoginPage.scss
@@ -1,3 +1,4 @@
+
 .login-page {
   height: 100vh;
   background-color: #ffffff;
@@ -10,15 +11,6 @@
 
     &-header {
       margin-bottom: 35px;
-    }
-
-    .login-title {
-      font-family: 'Playfair Display', serif;
-      font-size: 24px;
-      font-weight: bold;
-      color: #333333;
-      text-align: center;
-      margin-bottom: 40px;
     }
   }
 }
@@ -111,4 +103,45 @@
   justify-content: center;
   align-items: center;
 
+}
+@media (min-width: 824px) {
+  .login-wrapper {
+    width: 100vw;
+    height: 100vh;
+    background: var(--primary-login-bg);
+
+  }
+  .login-form {
+  .form-group {
+    margin-bottom: 30px;
+  }}
+  .login-page {
+    width: 416px;
+    height: 581px;
+    border-radius: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* Дополнительно для абсолютного центрирования */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .login-container {
+    width: 100%;
+    max-width: 375px;
+    box-sizing: border-box;
+    padding: 0 15px;
+    margin-top: -160px;
+
+    &-header {
+      margin-bottom: 35px;
+    }
+  }
+  .form-button {
+    position: absolute;
+    bottom: 38px;
+  }
 }
