--- a/src/features/auth/ui/RegisterPage/RegisterPage.scss
+++ b/src/features/auth/ui/RegisterPage/RegisterPage.scss
@@ -111,3 +111,34 @@
 
   }
 }
+@media (min-width: 824px) {
+  .register-wrapper {
+    width: 100vw;
+    height: 100vh;
+    background: var(--primary-login-bg);
+
+  }
+  .register-page {
+    width: 415px;
+    height: 705px;
+    border-radius: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .register-container {
+    width: 100%;
+    max-width: 375px;
+    box-sizing: border-box;
+    padding: 0 15px;
+    margin-top: -170px;
+
+    &-header {
+      margin-bottom: 35px;
+    }
+  }
+}
