--- a/src/shared/ui/FormInputGroup/FormInputGroup.scss
+++ b/src/shared/ui/FormInputGroup/FormInputGroup.scss
@@ -1,11 +1,20 @@
 .form-group {
+  max-width: 347px;
+  height: auto;
+
+  min-height: 97px;
+  overflow: visible;
+  position: relative;
+
   .input-wrapper {
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: start;
+    min-height: 65px;
 
     .input {
+      all: unset;
       width: 100%;
       padding: 8px 32px 8px 8px;
       border: 1px solid #ccc;
@@ -29,7 +38,6 @@
       width: 20px;
       height: 20px;
 
-
       &.success-icon {
         fill: #28a745;
       }
@@ -39,13 +47,19 @@
       }
     }
   }
+
+  .error-message {
+    font-size: 12px;
+    color: #F03E3E;
+    margin-top: 10px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+  }
 }
 
-.error-message {
-  color: #F03E3E;
-  font-size: 12px;
-  margin-top: 4px;
-}
+
 
 
 
