--- a/src/shared/ui/AuthTabs/AuthTabs.scss
+++ b/src/shared/ui/AuthTabs/AuthTabs.scss
@@ -29,3 +29,15 @@
     }
   }
 }
+@media (min-width: 824px) {
+  .auth-tabs {
+    height: 32px;
+
+    .auth-tab {
+      height: 32px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
