--- a/src/shared/ui/FormHeader/FormHeader.scss
+++ b/src/shared/ui/FormHeader/FormHeader.scss
@@ -17,3 +17,14 @@
     margin-top: 58px;
   }
 }
+
+@media (min-width: 824px) {
+  .login-container {
+    &-header {
+      &_top {
+        display: none;
+      }
+
+    }
+  }
+}
