--- a/src/shared/ui/FormInputGroup/FormInputGroup.scss
+++ b/src/shared/ui/FormInputGroup/FormInputGroup.scss
@@ -1,17 +1,17 @@
 .form-group {
   max-width: 347px;
   height: auto;
-
-  min-height: 97px;
+  min-height: 52px;
   overflow: visible;
   position: relative;
+  padding-bottom: 0;
 
   .input-wrapper {
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: start;
-    min-height: 65px;
+    min-height: 45px;
 
     .input {
       all: unset;
@@ -53,7 +53,7 @@
     color: #F03E3E;
     margin-top: 10px;
     position: absolute;
-    bottom: 0;
+    bottom: -20px;
     left: 0;
 
   }
