fix(styles): resolve parsing errors for font-size and font-weight

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -83,7 +83,7 @@
 
   &__title {
     font-family: 'Gilroy', sans-serif;
-    font-size: $title-semibold-18;
+    font-size: 18px;
     font-weight: 600;
     line-height: 21px;
     letter-spacing: 0.01em;
@@ -364,7 +364,7 @@
 
     &__title {
       margin: 10px 0;
-      font-size: var($title-semibold-18);
+      font-size: 18px;
     }
 
     &__content {
