--- a/src/shared/ui/SharePopup/SharePopup.scss
+++ b/src/shared/ui/SharePopup/SharePopup.scss
@@ -10,8 +10,8 @@
 
   &__title {
     font-family: 'Gilroy', sans-serif;
-    font-size: $body-medium-16;
-    font-weight: $body-bold-20;
+    font-size: 20px;
+    font-weight: 600;
     line-height: 20px;
     letter-spacing: 0.01em;
     text-align: left;
