--- a/src/shared/ui/Button/Button.scss
+++ b/src/shared/ui/Button/Button.scss
@@ -10,7 +10,7 @@
   text-decoration: none;
 
   &--primary {
-    background-color: #EE683E;
+    background-color: var(--btn-ptimary-bg);
     color: #FFFFFF;
     border: none;
     width: 100%;;
