--- a/src/features/auth/ui/RegisterPage/RegisterPage.scss
+++ b/src/features/auth/ui/RegisterPage/RegisterPage.scss
@@ -1,6 +1,7 @@
 .register-page {
   height: 100vh;
-  background-color: #ffffff;
+  background-color: var(--login-page-bg);
+
 
   .register-container {
     width: 100%;
@@ -57,14 +58,14 @@
       text-align: left;
       text-underline-position: from-font;
       text-decoration-skip-ink: none;
-      color: #212121;
+      color: var(--form-label-color);
     }
 
     input {
       width: 100%;
       padding: 10px;
-      border: none;
-      background: #F6F6F6;
+      border: var(--form-input-border);
+      background:var(--form-input-background);
       border-radius: 8px;
       outline: none;
       transition: border-color 0.3s;
@@ -80,17 +81,17 @@
 
 
       &:focus {
-        border-color: #ff6b35;
+        border-color: var(--form-input-focus);
       }
 
       &.input-error {
-        border: 1px solid #F03E3E;
+        border-color: var(--form-input-focus);
       }
     }
 
     .error-message {
       font-size: 12px;
-      color: #F03E3E;
+      color: var(--form-input-message);
       margin-top: 10px;
       margin-bottom: 0;
       display: block;
@@ -115,7 +116,7 @@
   .register-wrapper {
     width: 100vw;
     height: 100vh;
-    background: var(--primary-login-bg);
+    background: var(--login-page-max-bg);;
 
   }
   .register-page {
